# JUDIAgent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CondaPkg.toml  LICENSE  NOTICE  Project.toml  README.md  agent-safety-and-commit-workflow.mdc  demo_autonomous_agent.cast  langgraph.json  pyproject.toml  pyrightconfig.json  ruff.toml
.codex/skills/judiagent-dev/: SKILL.md
.cursor/rules/: judiagent-dev-and-testing.mdc  judiagent-safety-and-commit.mdc
.vscode.example/: mcp.json
benchmarks/: prompts.yaml
code_summary/bib/: references.bib
code_summary/figures/: agent_workflow.md  generate_figures.py  system_architecture.md  wave_design_loop.md
code_summary/text/: abstract.md  algorithm.md  case_study_template.md  experiments.md  future_work.md  implementation.md  introduction.md  latex_draft.md  limitations.md  method.md
docs/: JUDIAgent-vs-JutulGPT.md  README.md  codex-setup.md  devel-pace.md  reproducibility.md  workspace-and-outputs.md
env/: common-local.sh  desktop-local.sh  pace-local.sh
examples/: agent.py  autonomous_agent.py
examples/tools/: run_tool.py
judiagent_tutorial/: .gitignore  DEPLOYMENT.md  Project.toml  QUICK_START.md  README.md  STRUCTURE.md  judiagent_tutorial.ipynb  launch.sh  requirements.txt  setup.sh
scripts/: rtm_basic_image_water_mute.jl
src/judiagent/: __init__.py  benchmarks.py  configuration.py  globals.py  prompts.py  settings.py  state.py  utils.py
src/judiagent/agents/: __init__.py  agent.py  agent_base.py  autonomous_agent.py
src/judiagent/cli/: __init__.py  branding.py  cli_colorscheme.py  cli_utils.py  editing.py  menus.py  panels.py  streaming.py
src/judiagent/core/: __init__.py  documents.py  history.py  julia_code.py  messages.py  models.py  run_artifacts.py  state_utils.py
src/judiagent/human_in_the_loop/: __init__.py  cli.py  review_query.py  review_rag.py  review_validation.py
src/judiagent/julia/: __init__.py  bridge_types.py  documentation_lookup.py  error_formatting.py  execution_bridge.py  get_function_documentation.py  get_linting_result.py  judiagent_doc_lookup.jl  judiagent_lint_driver.jl  julia_code_runner.py  lint_analysis.py  subprocess_runner.py
src/judiagent/nodes/: __init__.py  (+6 more)
tests/: conftest.py
tests/integration_tests/: __init__.py  test_entrypoints.py
tests/unit_tests/: __init__.py  test_benchmark_catalog.py  test_core_runtime.py  test_domain_validation.py  test_imagegather_rag.py  test_julia_bridge_utils.py  test_julia_code_parsing.py  test_metric_guidance.py  test_output_policy.py  test_run_artifacts.py  test_validation_review.py
(+37 files in other folders)
